@@ -25,8 +25,11 @@ def downgrade(engine_name):
     eval("downgrade_%s" % engine_name)()
 
 <%
-    db_names = context.get("config").get_main_option("databases")
+    db_names = config.get_main_option("databases")
 %>
+
+## generate an "upgrade_<xyz>() / downgrade_<xyz>()" function
+## for each database name in the ini file.
 
 % for db_name in re.split(r',\s*', db_names):
 
